log
Fri 12 Aug 2022 01:06:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4a799d9
Mon 15 Aug 2022 01:32:06 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: variable ‘numParaSuma’ set but not used [-Werror=unused-but-set-variable]
   40 |   int numParaSuma;
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
977c8db
Mon 15 Aug 2022 01:39:23 AM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:43:15: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   43 |   *sumaN = (a , n);
      |               ^
exercises.c:43:10: error: lvalue required as left operand of assignment
   43 |   *sumaN = (a , n);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
34093d8
Mon 15 Aug 2022 01:40:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
79ed067
